--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:coverage": "npm run test -- --coverage "
   },
   "dependencies": {
+    "@react-navigation/native": "^5.0.9",
     "axios": "^0.19.2",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
@@ -26,7 +27,7 @@
     "react-native-svg": "^7.0.3",
     "react-native-video": "^5.0.2",
     "react-native-youtube": "^1.1.0",
-    "react-navigation": "^1.5.8",
+    "react-navigation": "^1.6.1",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-form": "^7.4.2",
